--- a/untitled1/sing.css
+++ b/untitled1/sing.css
@@ -6,31 +6,28 @@ ul{
     margin: 0;
     padding: 0;
 }
-.list1 {
-    display: inline;
-}
-#sing1 {
-    display: inline;
-    color: white;
-    font-weight: bold;
-    font-size: 25px;
-    position: absolute;
-    left: calc(100% / 20);
-    top: 100px;
-    text-align: center;
-    margin: 0;
-}
-#sing2 {
-    display: inline;
-    color: white;
-    font-weight: bold;
-    font-size: 25px;
-    position: absolute;
-    left: calc(100% / 5);
-    top: 100px;
-    text-align: center;
-    margin: 0;
-}
+/*#sing1 {*/
+/*    display: inline;*/
+/*    color: white;*/
+/*    font-weight: bold;*/
+/*    font-size: 25px;*/
+/*    position: absolute;*/
+/*    left: calc(100% / 20);*/
+/*    top: 100px;*/
+/*    text-align: center;*/
+/*    margin: 0;*/
+/*}*/
+/*#sing2 {*/
+/*    display: inline;*/
+/*    color: white;*/
+/*    font-weight: bold;*/
+/*    font-size: 25px;*/
+/*    position: absolute;*/
+/*    left: calc(100% / 5);*/
+/*    top: 100px;*/
+/*    text-align: center;*/
+/*    margin: 0;*/
+/*}*/
 #homepageName {
     margin-left: 30px;
     font: 50px solid;
@@ -71,31 +68,28 @@ a {
 }
 #homeMain div.totalMusic {
     position: relative;
-    left: 25px;
+    left: calc(2% - 9px);
     margin: auto;
     height: 300px;
     background: slategray;
     border-radius: 50px;
     margin-top: 50px;
     padding-top: 50px;
-    overflow: hidden;
-}
-.totalMusic{
-    text-align: left;
-    height: 452px; /*앨범이 들어있는 공간을 가로 6개씩 세로 2개로 고정시키기 위한 박스를 만든것*/
-    width: 1200px;
+    width: 48%;
 }
 #arrowButtonPrev {
     position: absolute;
     left: 24%;
     top: 48%;
     transform: translateY(-50%) rotate(180deg);
+    cursor: pointer;
 }
 #arrowButtonNext {
      position: absolute;
      right:21%;
      top: 48%;
      transform: translateY(-50%);
+     cursor: pointer;
 }
 .lineUpMusic {
     height: 350px;
@@ -112,11 +106,49 @@ a {
     transform: scale(1.0);
     transition: transform .2s;
     cursor: pointer;
+    right: -2px;
 }
 .mainPhoto:hover {
     transform: scale(1.2);
     z-index: 9;
-
+}
+/* Fading animation */
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+@-webkit-keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
+.numbertext {
+    top: -48%;
+    color: white;
+    font-size: 25px;
+    padding: 8px 12px;
+    position: absolute;
+}
+.ddoott {
+    text-align:center
+}
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+.active, .dot:hover {
+    background-color: #717171;
 }
 .waiting {
     border: 1px solid white;
@@ -156,48 +188,3 @@ a {
     font-weight: bold;
     font-family: Fantasy, serif;
 }
-#home_main div#home_main_profile_box {
-    position: relative;
-    text-align: center;
-    margin: auto;
-    width: 500px;
-    height: 800px;
-    background: #273869;
-    border-radius: 50px;
-    margin-top: 50px;
-    padding-top: 50px;
-    overflow: hidden;
-}
-
-#home_main div#home_main_profile_box .home_main_profile {
-    width: 400px;
-    height: 400px;
-    margin: 0 50px;
-    border-radius: 50%;
-    object-fit: cover;
-    text-align: center;
-}
-
-
-/*#overlay {*/
-/*    position: fixed;*/
-/*    display: none;*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    top: 0;*/
-/*    left: 0;*/
-/*    right: 0;*/
-/*    bottom: 0;*/
-/*    background-color: rgba(0,0,0,0.5);*/
-/*    z-index: 2;*/
-/*    cursor: pointer;*/
-/*}*/
-/*#text{*/
-/*    position: absolute;*/
-/*    top: 50%;*/
-/*    left: 50%;*/
-/*    font-size: 50px;*/
-/*    color: white;*/
-/*    transform: translate(-50%,-50%);*/
-/*    -ms-transform: translate(-50%,-50%);*/
-/*}*/
