--- a/untitled1/sing.css
+++ b/untitled1/sing.css
@@ -58,7 +58,7 @@ h1 span{
 .headerFont li:hover {
     background-color: rgba(255, 255, 255, .2);
 }
-a {
+.menu {
     text-decoration-line: none;
     color: white;
 }
@@ -77,20 +77,47 @@ a {
     padding-top: 50px;
     width: 48%;
 }
-#arrowButtonPrev {
-    position: absolute;
-    left: 24%;
-    top: 48%;
-    transform: translateY(-50%) rotate(180deg);
+.prev, .next {
     cursor: pointer;
+    position: absolute;
+    top: 46%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
 }
-#arrowButtonNext {
-     position: absolute;
-     right:21%;
-     top: 48%;
-     transform: translateY(-50%);
-     cursor: pointer;
+.prev {
+    left: calc(25% - 1px);
 }
+/* Position the "next button" to the right */
+.next {
+    right: 22%;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+/*#arrowButtonPrev {*/
+/*    position: absolute;*/
+/*    left: 24%;*/
+/*    top: 48%;*/
+/*    transform: translateY(-50%) rotate(180deg);*/
+/*    cursor: pointer;*/
+/*}*/
+/*#arrowButtonNext {*/
+/*     position: absolute;*/
+/*     right:21%;*/
+/*     top: 48%;*/
+/*     transform: translateY(-50%);*/
+/*     cursor: pointer;*/
+/*}*/
 .lineUpMusic {
     height: 350px;
     position: relative;
