--- a/untitled1/sing.css
+++ b/untitled1/sing.css
@@ -2,32 +2,6 @@ body {
     margin: 0px;
     background-color:black;
 }
-ul{
-    margin: 0;
-    padding: 0;
-}
-/*#sing1 {*/
-/*    display: inline;*/
-/*    color: white;*/
-/*    font-weight: bold;*/
-/*    font-size: 25px;*/
-/*    position: absolute;*/
-/*    left: calc(100% / 20);*/
-/*    top: 100px;*/
-/*    text-align: center;*/
-/*    margin: 0;*/
-/*}*/
-/*#sing2 {*/
-/*    display: inline;*/
-/*    color: white;*/
-/*    font-weight: bold;*/
-/*    font-size: 25px;*/
-/*    position: absolute;*/
-/*    left: calc(100% / 5);*/
-/*    top: 100px;*/
-/*    text-align: center;*/
-/*    margin: 0;*/
-/*}*/
 #homepageName {
     margin-left: 30px;
     font: 50px solid;
@@ -48,11 +22,10 @@ h1 span{
     display: inline-block;
     font-size: 40px;
     font-weight: bold;
-    vertical-align: top;
+    vertical-align: center;
     width: calc(100% / 4);
     float: left;
     color: #ffffff;
-    cursor: pointer;
     transition: .2s background-color;
 }
 .headerFont li:hover {
@@ -62,156 +35,161 @@ h1 span{
     text-decoration-line: none;
     color: white;
 }
-#main {
-    position: relative;
-    left: -400px;
-}
-#homeMain div.totalMusic {
-    position: relative;
-    left: calc(2% - 9px);
-    margin: auto;
-    height: 300px;
-    background: slategray;
-    border-radius: 50px;
-    margin-top: 50px;
-    padding-top: 50px;
-    width: 48%;
-}
-.prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 46%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-}
-.prev {
-    left: calc(25% - 1px);
-}
-/* Position the "next button" to the right */
-.next {
-    right: 22%;
-    border-radius: 3px 0 0 3px;
-}
+/*#main {*/
+/*    min-width: 950px;*/
 
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
-}
-/*#arrowButtonPrev {*/
-/*    position: absolute;*/
-/*    left: 24%;*/
-/*    top: 48%;*/
-/*    transform: translateY(-50%) rotate(180deg);*/
+/*    position: relative;*/
+/*    left: -400px;*/
+/*}*/
+/*#homeMain div.totalMusic {*/
+/*    position: relative;*/
+/*    left: calc(2% - 9px);*/
+/*    margin: auto;*/
+/*    height: 300px;*/
+/*    background: slategray;*/
+/*    border-radius: 50px;*/
+/*    margin-top: 50px;*/
+/*    padding-top: 50px;*/
+/*    width: 48%;*/
+/*    !*min-width: 1000px;*!*/
+/*}*/
+/*.prev, .next {*/
 /*    cursor: pointer;*/
+/*    position: absolute;*/
+/*    top: 46%;*/
+/*    width: auto;*/
+/*    padding: 16px;*/
+/*    margin-top: -22px;*/
+/*    color: white;*/
+/*    font-weight: bold;*/
+/*    font-size: 18px;*/
+/*    transition: 0.6s ease;*/
+/*    border-radius: 0 3px 3px 0;*/
+/*    user-select: none;*/
 /*}*/
-/*#arrowButtonNext {*/
-/*     position: absolute;*/
-/*     right:21%;*/
-/*     top: 48%;*/
-/*     transform: translateY(-50%);*/
-/*     cursor: pointer;*/
+/*.prev {*/
+/*    left: calc(25% - 1px);*/
 /*}*/
-.lineUpMusic {
-    height: 350px;
-    position: relative;
-    display: inline-block;
-    margin: 70px 50px;
-}
-.mainPhoto {
-    width: 150px;
-    height: 150px;
-    position: relative;
-    top: -95px;
-    border: 1px solid white;
-    transform: scale(1.0);
-    transition: transform .2s;
-    cursor: pointer;
-    right: -2px;
-}
-.mainPhoto:hover {
-    transform: scale(1.2);
-    z-index: 9;
-}
-/* Fading animation */
-.fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
-}
-@-webkit-keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
-}
-@keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
-}
-.numbertext {
-    top: -48%;
-    color: white;
-    font-size: 25px;
-    padding: 8px 12px;
-    position: absolute;
-}
-.ddoott {
-    text-align:center
-}
-.dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
-.active, .dot:hover {
-    background-color: #717171;
-}
-.waiting {
-    border: 1px solid white;
-    position: absolute;
-    text-align: center;
-    top: 23%;
-    left: calc(100% - 32%);
-    height: 580px;
-    width: 450px;
-}
-#prad {
-    color: white;
-}
-#footer {
-    text-align: right ;
-}
-#footer2 {
-    position: relative;
-    bottom: -55px;
-    margin-left: 130px;
-}
-.text1{
-    color:rgb(69,88,90);
-    font: 40px solid;
-    font-weight: bold;
-    font-family: Fantasy, serif;
-}
-.text2{
-    color:rgb(69,88,90,.8);
-    font: 40px solid;
-    font-weight: bold;
-    font-family: Fantasy, serif;
-}
-.text3{
-    color:rgb(69,88,90,.5);
-    font: 40px solid;
-    font-weight: bold;
-    font-family: Fantasy, serif;
-}
+/*!* Position the "next button" to the right *!*/
+/*.next {*/
+/*    right: 22%;*/
+/*    border-radius: 3px 0 0 3px;*/
+/*}*/
+
+/*!* On hover, add a black background color with a little bit see-through *!*/
+/*.prev:hover, .next:hover {*/
+/*    background-color: rgba(0,0,0,0.8);*/
+/*}*/
+/*!*#arrowButtonPrev {*!*/
+/*!*    position: absolute;*!*/
+/*!*    left: 24%;*!*/
+/*!*    top: 48%;*!*/
+/*!*    transform: translateY(-50%) rotate(180deg);*!*/
+/*!*    cursor: pointer;*!*/
+/*!*}*!*/
+/*!*#arrowButtonNext {*!*/
+/*!*     position: absolute;*!*/
+/*!*     right:21%;*!*/
+/*!*     top: 48%;*!*/
+/*!*     transform: translateY(-50%);*!*/
+/*!*     cursor: pointer;*!*/
+/*!*}*!*/
+/*.lineUpMusic {*/
+/*    height: 350px;*/
+/*    position: relative;*/
+/*    display: inline-block;*/
+/*    margin: 70px 50px;*/
+/*}*/
+/*.mainPhoto {*/
+/*    width: 150px;*/
+/*    height: 150px;*/
+/*    position: relative;*/
+/*    top: -95px;*/
+/*    border: 1px solid white;*/
+/*    transform: scale(1.0);*/
+/*    transition: transform .2s;*/
+/*    cursor: pointer;*/
+/*    right: -2px;*/
+/*}*/
+/*.mainPhoto:hover {*/
+/*    transform: scale(1.2);*/
+/*    z-index: 9;*/
+/*}*/
+/*!* Fading animation *!*/
+/*.fade {*/
+/*    -webkit-animation-name: fade;*/
+/*    -webkit-animation-duration: 1.5s;*/
+/*    animation-name: fade;*/
+/*    animation-duration: 1.5s;*/
+/*}*/
+/*@-webkit-keyframes fade {*/
+/*    from {opacity: .4}*/
+/*    to {opacity: 1}*/
+/*}*/
+/*@keyframes fade {*/
+/*    from {opacity: .4}*/
+/*    to {opacity: 1}*/
+/*}*/
+/*.numbertext {*/
+/*    top: -48%;*/
+/*    color: white;*/
+/*    font-size: 25px;*/
+/*    padding: 8px 12px;*/
+/*    position: absolute;*/
+/*}*/
+/*.ddoott {*/
+/*    text-align:center*/
+/*}*/
+/*.dot {*/
+/*    position:relative;*/
+/*    top: 10px;*/
+/*    cursor: pointer;*/
+/*    height: 15px;*/
+/*    width: 15px;*/
+/*    margin: 0 2px;*/
+/*    background-color: #bbb;*/
+/*    border-radius: 50%;*/
+/*    display: inline-block;*/
+/*    transition: background-color 0.6s ease;*/
+/*}*/
+/*.active, .dot:hover {*/
+/*    background-color: #717171;*/
+/*}*/
+/*.waiting {*/
+/*    border: 1px solid white;*/
+/*    position: absolute;*/
+/*    text-align: center;*/
+/*    top: 23%;*/
+/*    left: calc(100% - 32%);*/
+/*    height: 580px;*/
+/*    width: 450px;*/
+/*}*/
+/*#prad {*/
+/*    color: white;*/
+/*}*/
+/*#footer {*/
+/*    text-align: right ;*/
+/*}*/
+/*#footer2 {*/
+/*    position: relative;*/
+/*    bottom: -55px;*/
+/*    margin-left: 130px;*/
+/*}*/
+/*.text1{*/
+/*    color:rgb(69,88,90);*/
+/*    font: 40px solid;*/
+/*    font-weight: bold;*/
+/*    font-family: Fantasy, serif;*/
+/*}*/
+/*.text2{*/
+/*    color:rgb(69,88,90,.8);*/
+/*    font: 40px solid;*/
+/*    font-weight: bold;*/
+/*    font-family: Fantasy, serif;*/
+/*}*/
+/*.text3{*/
+/*    color:rgb(69,88,90,.5);*/
+/*    font: 40px solid;*/
+/*    font-weight: bold;*/
+/*    font-family: Fantasy, serif;*/
+/*}*/
